added the second and third blogs

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="blog.css">
 </head>
 <body>
+
+    <h1>my fast website</h1>
     <div>
-        <h3>my fast website </h3>
+        <h3>my fast blogs </h3>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quidem distinctio assumenda sunt odit iure beatae voluptas hic recusandae dolor iste, debitis, alias ipsa accusantium, ex voluptatem voluptatibus veniam nemo inventore nostrum dolore?
         </p>
@@ -17,7 +19,7 @@
     </div>
 
     <div>
-        <h3>my fast website </h3>
+        <h3>my second blogs </h3>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quidem distinctio assumenda sunt odit iure beatae voluptas hic recusandae dolor iste, debitis, alias ipsa accusantium, ex voluptatem voluptatibus veniam nemo inventore nostrum dolore?
         </p>
@@ -26,7 +28,7 @@
     </div>
 
     <div>
-        <h3>my fast website </h3>
+        <h3>my third blogs </h3>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quidem distinctio assumenda sunt odit iure beatae voluptas hic recusandae dolor iste, debitis, alias ipsa accusantium, ex voluptatem voluptatibus veniam nemo inventore nostrum dolore?
         </p>
